# hadoop-rs-uni

./: .gitignore  Cargo.toml  Makefile  README.md
data/: test-deltas.txt  test-list.txt  test-matrix.txt
src/: lib.rs
src/mappers/: degree_centrality.rs  identity.rs  mod.rs  pagerank.rs
src/reducers/: aggregate.rs  append.rs  degree_centrality.rs  mod.rs  pagerank.rs
tools/: hadoop.sh  pagerank.sh  test.sh  unix.sh
